bug fixes in code integration

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="./css/style.css" type="text/css">
 </head>
 <body>
-	<div id='scoreBoard'>scoreboard</div>
+	<div id='scoreBoard'></div>
 	<h1>Magic School Bus Quiz</h1>
 	<h1 id='timer'>Time Left</h1><div id='timeDisplay'>30</div>
 <!-- 	<div id='feedbackBox'></div>	-->	
@@ -16,7 +16,7 @@
 			<input type="radio" name="answer" id="ans2"><label id="lab2"></label><br>
 			<input type="radio" name="answer" id='ans3'><label id="lab3"></label><br>
 			<input type="radio" name="answer" id='ans4'><label id="lab4"></label><br>
-			<button type="button" name="nextButton" id='nextButton'>NEXT</button>
+			<input type="submit" name="Next" id='nextButton'>
 			<button id="submitButton" hidden>Submit</button>
 		</form>
 		
