--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
 <head>
 	<title>JavaScript Quiz</title>
 	<link rel="stylesheet" href="./css/style.css" type="text/css">
+	<link href="https://fonts.googleapis.com/css?family=Caveat+Brush" rel="stylesheet">
 </head>
 <body>
 	<div id='scoreBoard'></div>
 	<h1>Magic School Bus Quiz</h1>
 	<h1 id='timer'>Time Left</h1><div id='timeDisplay'>30</div>
-<!-- 	<div id='feedbackBox'></div>	-->	
+ 	<div id='feedbackBox'></div>		
 	<div>
 		<form>
 			<p id='question'>Question</p>
